--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -40,8 +40,8 @@
                 </property>
             </activation>
             <modules>
-                <module>daytrader-derby-datasource</module>
-                <!-- 
+                <!-- <module>daytrader-derby-datasource</module>
+                
         	<module>daytrader-web-jdbc-jetty</module>
                 <module>daytrader-web-jdbc-tomcat</module>
         	<module>daytrader-web-jpa-jetty</module>
@@ -105,45 +105,7 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.geronimo.buildsupport</groupId>
-                <artifactId>car-maven-plugin</artifactId>
-                <version>${geronimoVersion}</version>
-                <!-- Install as extention to allow 'car' packaging to be used. -->
-                <extensions>true</extensions>
-                <configuration>
-                    <archive>
-                        <!-- Do not include META-INF/maven to avoid long file problems on windows -->
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
-                    <url>http://geronimo.apache.org/</url>
-                    <author>The Apache Geronimo development community</author>
-                    <osiApproved>true</osiApproved>
-                    <useMavenDependencies>
-                        <value>true</value>
-                        <includeVersion>true</includeVersion>
-                        <useTransitiveDependencies>true</useTransitiveDependencies>
-                    </useMavenDependencies>
-                    <deploymentConfigs>
-                        <deploymentConfig>${gbeanDeployer}</deploymentConfig>
-                        <deploymentConfig>${j2eeDeployer}</deploymentConfig>
-                        <deploymentConfig>${connectorDeployer}</deploymentConfig>
-                    </deploymentConfigs>
-                    <commonInstance>
-                        <plugin-artifact>
-                        <geronimo-version>${geronimoVersion}</geronimo-version>
-                            <!--<geronimo-version>2.2</geronimo-version>
-                            <geronimo-version>2.2.1-SNAPSHOT</geronimo-version>-->
-                            <jvm-version>1.5</jvm-version>
-                            <jvm-version>1.6</jvm-version>
-                            <source-repository>~/.m2/repository/</source-repository>
-                            <source-repository>http://repository.apache.org/snapshots/</source-repository>
-                            <source-repository>http://repo1.maven.org/maven2/</source-repository>
-                        </plugin-artifact>
-                    </commonInstance>
-                </configuration>
-            </plugin>
-
+        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -174,20 +136,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-idea-plugin</artifactId>
-                <configuration>
-                    <jdkName>1.5</jdkName>
-                    <linkModules>true</linkModules>
-                </configuration>
-            </plugin>
-
+           
         </plugins>
     </build>
 </project>
