--- a/assemblies/javaee/daytrader-war/src/main/webapp/WEB-INF/web.xml
+++ b/assemblies/javaee/daytrader-war/src/main/webapp/WEB-INF/web.xml
@@ -403,13 +403,13 @@
     
 
     <message-destination-ref>
-        <message-destination-ref-name>jms/TradeBrokerQueue</message-destination-ref-name>
+        <message-destination-ref-name>jms/queue/TradeBrokerQueue</message-destination-ref-name>
         <message-destination-type>javax.jms.Queue</message-destination-type>
         <message-destination-usage>Produces</message-destination-usage>
         <!-- <message-destination-link>dt-ejb.jar#jms/TradeBrokerQueue</message-destination-link> -->
     </message-destination-ref>
     <message-destination-ref>
-        <message-destination-ref-name>jms/TradeStreamerTopic</message-destination-ref-name>
+        <message-destination-ref-name>jms/topic/TradeStreamerTopic</message-destination-ref-name>
         <message-destination-type>javax.jms.Topic</message-destination-type>
         <message-destination-usage>Produces</message-destination-usage>
         <!-- <message-destination-link>dt-ejb.jar#jms/TradeStreamerTopic</message-destination-link> -->
