--- a/assemblies/web/daytrader-web-jpa/src/main/webapp/WEB-INF/web.xml
+++ b/assemblies/web/daytrader-web-jpa/src/main/webapp/WEB-INF/web.xml
@@ -427,7 +427,7 @@
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
     </resource-ref>
-<!-- JavaEE only
+<!-- JavaEE only -->
     <resource-ref>
         <res-ref-name>jms/QueueConnectionFactory</res-ref-name>
         <res-type>javax.jms.QueueConnectionFactory</res-type>
@@ -441,6 +441,7 @@
         <res-sharing-scope>Shareable</res-sharing-scope>
     </resource-ref>
     
+    <!-- 
     <ejb-ref>
         <ejb-ref-name>ejb/TradeSLSBBean</ejb-ref-name>
         <ejb-ref-type>Session</ejb-ref-type>
@@ -453,18 +454,18 @@
         <remote>org.apache.geronimo.samples.daytrader.ejb3.DirectSLSBRemote</remote>
         <ejb-link>DirectSLSBBean</ejb-link>
     </ejb-ref>
-
+ -->
     <message-destination-ref>
-        <message-destination-ref-name>jms/TradeBrokerQueue</message-destination-ref-name>
+        <message-destination-ref-name>jms/queue/TradeBrokerQueue</message-destination-ref-name>
         <message-destination-type>javax.jms.Queue</message-destination-type>
         <message-destination-usage>Produces</message-destination-usage>
-        <message-destination-link>dt-ejb.jar#jms/TradeBrokerQueue</message-destination-link>
+        <!-- <message-destination-link>dt-ejb.jar#jms/TradeBrokerQueue</message-destination-link> -->
     </message-destination-ref>
     <message-destination-ref>
-        <message-destination-ref-name>jms/TradeStreamerTopic</message-destination-ref-name>
+        <message-destination-ref-name>jms/topic/TradeStreamerTopic</message-destination-ref-name>
         <message-destination-type>javax.jms.Topic</message-destination-type>
         <message-destination-usage>Produces</message-destination-usage>
-        <message-destination-link>dt-ejb.jar#jms/TradeStreamerTopic</message-destination-link>
+        <!--  <message-destination-link>dt-ejb.jar#jms/TradeStreamerTopic</message-destination-link> -->
     </message-destination-ref>
     
     <service-ref>
